--- a/app/Resources/translations/validators.es.yml
+++ b/app/Resources/translations/validators.es.yml
@@ -8,5 +8,5 @@ template.conflict.prefix: 'Ya existe una Plantilla con ese prefijo.'
 state.conflict.name: 'Ya existe un Estado con ese nombre.'
 state.conflict.abbreviation: 'Ya existe un Estado con ese inicial.'
 field.conflict.name: 'Ya existe un Campo con ese nombre.'
-list.conflict.key: 'Item with entered key already exists.'
-list.conflict.value: 'Item with entered value already exists.'
+listitem.conflict.key: 'Item with entered key already exists.'
+listitem.conflict.value: 'Item with entered value already exists.'
