--- a/app/Resources/translations/validators.fr.yml
+++ b/app/Resources/translations/validators.fr.yml
@@ -8,5 +8,5 @@ template.conflict.prefix: 'Il existe déjà un modèle portant ce un préfixe.'
 state.conflict.name: 'Il existe déjà un état portant ce nom.'
 state.conflict.abbreviation: 'Il existe déjà un état portant ce abréviation.'
 field.conflict.name: 'Il existe déjà un champ portant ce nom.'
-list.conflict.key: 'Item with entered key already exists.'
-list.conflict.value: 'Item with entered value already exists.'
+listitem.conflict.key: 'Item with entered key already exists.'
+listitem.conflict.value: 'Item with entered value already exists.'
