--- a/app/Resources/translations/validators.lv.yml
+++ b/app/Resources/translations/validators.lv.yml
@@ -8,5 +8,5 @@ template.conflict.prefix: 'Lekāls ar tādu priedēkli jau eksistē.'
 state.conflict.name: 'Stāvoklis ar tādu nosaukumu jau eksistē.'
 state.conflict.abbreviation: 'Stāvoklis ar tādu saīsinājumu jau eksistē.'
 field.conflict.name: 'Atribūts ar tādu nosaukumu jau eksistē.'
-list.conflict.key: 'Item with entered key already exists.'
-list.conflict.value: 'Item with entered value already exists.'
+listitem.conflict.key: 'Item with entered key already exists.'
+listitem.conflict.value: 'Item with entered value already exists.'
