--- a/app/Resources/translations/validators.nl.yml
+++ b/app/Resources/translations/validators.nl.yml
@@ -8,5 +8,5 @@ template.conflict.prefix: 'Sjabloon met ingevoerde voorvoegsel bestaat reeds.'
 state.conflict.name: 'Status met ingevoerde naam bestaat reeds.'
 state.conflict.abbreviation: 'Status met ingevoerde afkorting bestaat reeds.'
 field.conflict.name: 'Veld met ingevoerde naam bestaat reeds.'
-list.conflict.key: 'Item with entered key already exists.'
-list.conflict.value: 'Item with entered value already exists.'
+listitem.conflict.key: 'Item with entered key already exists.'
+listitem.conflict.value: 'Item with entered value already exists.'
