--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -179,4 +179,7 @@ field.error.value_range: 'Der Wert von "%name%" muss im Bereich von %min% bis %m
 field.permissions.none: keiner
 field.permissions.read_only: 'nur lesen'
 field.permissions.read_write: 'lesen und schreiben'
-list.items: Listeneinträge
+listitems: Listeneinträge
+listitem.key: 'Item key'
+listitem.value: 'Item value'
+listitem.confirm.delete: 'Are you sure you want delete this item?'
