--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -178,4 +178,7 @@ field.error.value_range: 'Value of "%name%" should be in range from %min% to %ma
 field.permissions.none: none
 field.permissions.read_only: read-only
 field.permissions.read_write: 'read and write'
-list.items: 'List items'
+listitems: 'List items'
+listitem.key: 'Item key'
+listitem.value: 'Item value'
+listitem.confirm.delete: 'Are you sure you want delete this item?'
