--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -179,4 +179,7 @@ field.error.value_range: 'El valor de "%name%" debe estar comprendido entre %min
 field.permissions.none: ninguno
 field.permissions.read_only: 'sólo lectura'
 field.permissions.read_write: 'lectura y escritura'
-list.items: 'Lista de ítems'
+listitems: 'Lista de ítems'
+listitem.key: 'Item key'
+listitem.value: 'Item value'
+listitem.confirm.delete: 'Are you sure you want delete this item?'
