--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -179,4 +179,7 @@ field.error.value_range: 'La valeur de "%name%" doit être comprise entre %min% 
 field.permissions.none: aucun
 field.permissions.read_only: 'lecture seule'
 field.permissions.read_write: 'lecture et écriture'
-list.items: 'éléments de liste'
+listitems: 'Éléments de liste'
+listitem.key: 'Item key'
+listitem.value: 'Item value'
+listitem.confirm.delete: 'Are you sure you want delete this item?'
