--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -179,4 +179,7 @@ field.error.value_range: 'A(z) "%name%" értéke %min% és %max% közé kell, ho
 field.permissions.none: nincs
 field.permissions.read_only: 'csak olvasható'
 field.permissions.read_write: 'olvasás és írás'
-list.items: 'Lista elemei'
+listitems: 'Lista elemei'
+listitem.key: 'Item key'
+listitem.value: 'Item value'
+listitem.confirm.delete: 'Are you sure you want delete this item?'
