--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -179,4 +179,7 @@ field.error.value_range: '"%name%" lauciņa lielumam jābūt no %min% līdz %max
 field.permissions.none: nav
 field.permissions.read_only: 'tikai nolasīšanai'
 field.permissions.read_write: 'lasīt un rakstīt'
-list.items: 'Saraksta elementi'
+listitems: 'Saraksta elementi'
+listitem.key: 'Item key'
+listitem.value: 'Item value'
+listitem.confirm.delete: 'Are you sure you want delete this item?'
