--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -179,4 +179,7 @@ field.error.value_range: 'Waarde "%name%" moet in het bereik %min% tot %max% lig
 field.permissions.none: geen
 field.permissions.read_only: 'alleen lezen'
 field.permissions.read_write: 'lezen en schrijven'
-list.items: Oplijsten
+listitems: Oplijsten
+listitem.key: 'Item key'
+listitem.value: 'Item value'
+listitem.confirm.delete: 'Are you sure you want delete this item?'
