--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -179,4 +179,7 @@ field.error.value_range: 'Värdet av "%name%" ska vara i intervallet från %min%
 field.permissions.none: inga
 field.permissions.read_only: skrivskyddad
 field.permissions.read_write: 'läsa och skriva'
-list.items: Listobjekt
+listitems: Listobjekt
+listitem.key: 'Item key'
+listitem.value: 'Item value'
+listitem.confirm.delete: 'Are you sure you want delete this item?'
