--- a/app/Resources/translations/validators.de.yml
+++ b/app/Resources/translations/validators.de.yml
@@ -8,5 +8,5 @@ template.conflict.prefix: 'Eine Anfrageart mit diesem Präfix existiert bereits.
 state.conflict.name: 'Ein Status mit diesem Namen existiert bereits.'
 state.conflict.abbreviation: 'Ein Status mit diesem Abkürzung existiert bereits.'
 field.conflict.name: 'Ein Zusatz mit diesem Namen existiert bereits.'
-list.conflict.key: 'Item with entered key already exists.'
-list.conflict.value: 'Item with entered value already exists.'
+listitem.conflict.key: 'Item with entered key already exists.'
+listitem.conflict.value: 'Item with entered value already exists.'
