--- a/app/Resources/translations/validators.pl.yml
+++ b/app/Resources/translations/validators.pl.yml
@@ -8,5 +8,5 @@ template.conflict.prefix: 'Szablon o podanej prefixie już istnieje.'
 state.conflict.name: 'Stan o tej nazwie już istnieje.'
 state.conflict.abbreviation: 'Stan o tej skrót już istnieje.'
 field.conflict.name: 'Pole o podanej nazwie już istnieje.'
-list.conflict.key: 'Item with entered key already exists.'
-list.conflict.value: 'Item with entered value already exists.'
+listitem.conflict.key: 'Item with entered key already exists.'
+listitem.conflict.value: 'Item with entered value already exists.'
