--- a/app/Resources/translations/validators.pt_BR.yml
+++ b/app/Resources/translations/validators.pt_BR.yml
@@ -8,5 +8,5 @@ template.conflict.prefix: 'O prefixo escolhido já existe.'
 state.conflict.name: 'O estado escolhido já existe.'
 state.conflict.abbreviation: 'O abreviação já existe.'
 field.conflict.name: 'O Campo escolhido já existe.'
-list.conflict.key: 'Item with entered key already exists.'
-list.conflict.value: 'Item with entered value already exists.'
+listitem.conflict.key: 'Item with entered key already exists.'
+listitem.conflict.value: 'Item with entered value already exists.'
