--- a/app/Resources/translations/validators.ro.yml
+++ b/app/Resources/translations/validators.ro.yml
@@ -8,5 +8,5 @@ template.conflict.prefix: 'Sablonul prefixul introdus exista deja.'
 state.conflict.name: 'Numele starii deja exista.'
 state.conflict.abbreviation: 'Prescurtarea starii deja exista.'
 field.conflict.name: 'Numele campului deja exista.'
-list.conflict.key: 'Item with entered key already exists.'
-list.conflict.value: 'Item with entered value already exists.'
+listitem.conflict.key: 'Item with entered key already exists.'
+listitem.conflict.value: 'Item with entered value already exists.'
