--- a/app/Resources/translations/validators.sv.yml
+++ b/app/Resources/translations/validators.sv.yml
@@ -8,5 +8,5 @@ template.conflict.prefix: 'Mall med detta prefixet finns redan.'
 state.conflict.name: 'Status med detta namnet finns redan.'
 state.conflict.abbreviation: 'Status med detta förkortningen finns redan.'
 field.conflict.name: 'Fält med detta namnet finns redan.'
-list.conflict.key: 'Item with entered key already exists.'
-list.conflict.value: 'Item with entered value already exists.'
+listitem.conflict.key: 'Item with entered key already exists.'
+listitem.conflict.value: 'Item with entered value already exists.'
