--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -180,3 +180,7 @@ listitems: 'Lista de itens'
 listitem.value: 'Item value'
 listitem.text: 'Item text'
 listitem.confirm.delete: 'Are you sure you want delete this item?'
+records: Registros
+record.id: ID
+record.subject: Assunto
+record.age: Idade
