--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -180,3 +180,7 @@ listitems: 'Položky seznamu'
 listitem.value: 'Item value'
 listitem.text: 'Item text'
 listitem.confirm.delete: 'Are you sure you want delete this item?'
+records: Záznamy
+record.id: ID
+record.subject: Předmět
+record.age: Stáří
