--- a/app/Resources/translations/messages.en_CA.yml
+++ b/app/Resources/translations/messages.en_CA.yml
@@ -180,3 +180,7 @@ listitems: 'List items'
 listitem.value: 'Item value'
 listitem.text: 'Item text'
 listitem.confirm.delete: 'Are you sure you want delete this item?'
+records: Records
+record.id: ID
+record.subject: Subject
+record.age: Age
