--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -180,3 +180,7 @@ listitems: 'Éléments de liste'
 listitem.value: 'Item value'
 listitem.text: 'Item text'
 listitem.confirm.delete: 'Are you sure you want delete this item?'
+records: Enregistrements
+record.id: ID
+record.subject: Sujet
+record.age: Âge
