--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -180,3 +180,7 @@ listitems: 'Lista elemei'
 listitem.value: 'Item value'
 listitem.text: 'Item text'
 listitem.confirm.delete: 'Are you sure you want delete this item?'
+records: Rekordok
+record.id: ID
+record.subject: Tárgy
+record.age: Kor
