--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -180,3 +180,7 @@ listitems: リストのアイテム
 listitem.value: 'Item value'
 listitem.text: 'Item text'
 listitem.confirm.delete: 'Are you sure you want delete this item?'
+records: レコード
+record.id: ID
+record.subject: タイトル
+record.age: 必須対応日数
