--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -180,3 +180,7 @@ listitems: Oplijsten
 listitem.value: 'Item value'
 listitem.text: 'Item text'
 listitem.confirm.delete: 'Are you sure you want delete this item?'
+records: Records
+record.id: ID
+record.subject: Onderwerp
+record.age: Leeftijd
