--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -180,3 +180,7 @@ listitems: 'Pozycje listy'
 listitem.value: 'Item value'
 listitem.text: 'Item text'
 listitem.confirm.delete: 'Are you sure you want delete this item?'
+records: Rekordy
+record.id: ID
+record.subject: Temat
+record.age: Wiek
