--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -180,3 +180,7 @@ listitems: Listobjekt
 listitem.value: 'Item value'
 listitem.text: 'Item text'
 listitem.confirm.delete: 'Are you sure you want delete this item?'
+records: Poster
+record.id: ID
+record.subject: Ämne
+record.age: Ålder
