--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -180,3 +180,7 @@ listitems: 'Ögeleri listele'
 listitem.value: 'Item value'
 listitem.text: 'Item text'
 listitem.confirm.delete: 'Are you sure you want delete this item?'
+records: Kayıtlar
+record.id: ID
+record.subject: Konu
+record.age: Dönem
