--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -80,6 +80,8 @@ key.colon: Colon
 key.semicolon: Semicolon
 key.vertical_line: 'Vertical line'
 file: Datne
+files: Datnes
+kb: KB
 size: Izmērs
 delimiter: Norobežotājs
 encoding: Kodēšana
