--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -79,6 +79,8 @@ key.colon: Colon
 key.semicolon: Semicolon
 key.vertical_line: 'Vertical line'
 file: File
+files: Files
+kb: KB
 size: Size
 delimiter: Delimiter
 encoding: Encoding
