--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -80,6 +80,8 @@ key.colon: Colon
 key.semicolon: Semicolon
 key.vertical_line: 'Vertical line'
 file: Plik
+files: Pliki
+kb: KB
 size: Rozmiar
 delimiter: 'Znak rozdzielenia'
 encoding: Kodowanie
